fix(Step): z-index issue in 2.x (#9004)

--- a/src/step/index.less
+++ b/src/step/index.less
@@ -94,24 +94,11 @@
       border-bottom-width: 1px;
     }
 
-    &:first-child {
-      &::before {
-        position: absolute;
-        top: 0;
-        left: -15px;
-        z-index: 1;
-        width: 1px;
-        height: 20px;
-        background-color: @white;
-        content: '';
-      }
-    }
-
     .van-step__circle-container {
       position: absolute;
       top: 19px;
       left: -15px;
-      z-index: 2;
+      z-index: 1;
       font-size: @step-icon-size;
       line-height: 1;
       transform: translate(-50%, -50%);
